--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,7 +6,7 @@
     android:padding="16dp"
     android:gravity="center">
 
-    <!-- Welcome Message (e.g., Welcome, [User's Name]) -->
+    <!-- Welcome Message -->
     <TextView
         android:id="@+id/welcomeMessage"
         android:layout_width="wrap_content"
@@ -23,7 +23,7 @@
         android:gravity="center_vertical"
         android:layout_marginBottom="16dp">
 
-        <!-- Quiz Tracker (e.g., 1 / 5) -->
+        <!-- Quiz Tracker -->
         <TextView
             android:id="@+id/quizTracker"
             android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
             android:textSize="18sp"
             android:layout_marginEnd="10dp"/>
 
-        <!-- Progress Bar (rectangle) -->
+        <!-- Progress Bar -->
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="0dp"
